# CageModeler

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
cage_generation/: CMakeLists.txt  main .cpp
cagedeformations/: CMakeLists.txt
cagedeformations/include/cagedeformations/: BHC.h  GreenCoordinates.h  InfluenceMap.h  LoadFBX.h  LoadMesh.h  MaximumEntropyCoordinates.h  MaximumLikelihoodCoordinates.h  Parametrization.h  WeightInterpolation.h  globals.h  point3.h  somig.h
cagedeformations/src/: GreenCoordinates.cpp  InfluenceMap.cpp  LoadFBX.cpp  LoadMesh.cpp  MaximumEntropyCoordinates.cpp  MaximumLikelihoodCoordinates.cpp  Parametrization.cpp  WeightInterpolation.cpp  globals.cpp  somig.cpp
cmake/: CageDeformationsConfig.cmake.in
evaluation/: convertCagesToOff.py  evaluation.py
models/: bishop_cages_triangulated_embedding.msh  cactus_cages_triangulated_embedding.msh  sphere_cages_triangulated.msh  sphere_cages_triangulated_very_fine.msh
viewer/: CMakeLists.txt
viewer/app/: App.cpp  App.h  CMakeLists.txt  Configuration.h  main.cpp
viewer/app/Core/: DoubleBuffer.h  Memory.h  Platform.h  Subsystem.cpp  Subsystem.h  Types.h
viewer/app/Editor/: Editor.cpp  Editor.h  Gizmo.cpp  Gizmo.h  Light.h  Scene.cpp  Scene.h
viewer/app/Input/: InputSubsystem.cpp  InputSubsystem.h
viewer/app/Logging/: Logging.h  LoggingSubsystem.cpp  LoggingSubsystem.h
viewer/app/Mesh/: BVH.cpp  BVH.h  GeometryUtils.h  MeshLibrary.cpp  MeshLibrary.h  MeshTransformation.cpp  MeshTransformation.h  OpenMeshTraits.h  PolygonMesh.cpp  PolygonMesh.h  PolygonMeshKernel.h  PolygonMeshProxy.cpp  PolygonMeshProxy.h  ScreenPass.cpp  ScreenPass.h  Selection.h
viewer/app/Mesh/Operations/: MeshComputeDeformationOperation.cpp  MeshComputeDeformationOperation.h  MeshComputeInfluenceMapOperation.cpp  MeshComputeInfluenceMapOperation.h  MeshComputeWeightsOperation.cpp  MeshComputeWeightsOperation.h  MeshExportInfluenceMapOperation.cpp  MeshExportInfluenceMapOperation.h  MeshExportOperation.cpp  MeshExportOperation.h  MeshExportWeightsOperation.h  MeshGenerateCageOperation.cpp  MeshGenerateCageOperation.h  MeshLoadOperation.cpp  MeshLoadOperation.h  MeshOperation.h  MeshOperationSystem.cpp  MeshOperationSystem.h  MeshWeightsParams.h
viewer/app/Mesh/Operations/CageGenerationSteps/: ClosingOperator.h  RemeshOperator.h  Utils.h  Voxelizer.h
viewer/app/Navigation/: Camera.cpp  Camera.h  CameraSubsystem.cpp  CameraSubsystem.h
viewer/app/Rendering/: RenderPipelineManager.cpp  RenderPipelineManager.h  RenderSubsystem.cpp  RenderSubsystem.h
viewer/app/Rendering/Commands/: BufferCommand.h  DrawCommand.h  ImageCommand.h  RenderCommand.h  RenderCommandScheduler.cpp  RenderCommandScheduler.h  RenderPassCommand.h
viewer/app/Rendering/Core/: AlignedVector.h  Buffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  Instance.cpp  Instance.h  Pipeline.h  RenderProxy.cpp  RenderProxy.h  RenderProxyCollector.cpp  RenderProxyCollector.h  RenderResource.h  RenderResourceManager.cpp  RenderResourceManager.h  RenderSurface.cpp  RenderSurface.h  Swapchain.cpp  Swapchain.h  Synchronization.h
viewer/app/Rendering/Scene/: SceneData.h  SceneRenderer.cpp  SceneRenderer.h
viewer/app/Rendering/Utils/: VulkanUtils.h  VulkanValidation.h
viewer/app/Thread/: FunctionWrapper.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h
viewer/app/Tools/: Tool.h  ToolSystem.cpp  ToolSystem.h  TransformTool.h
viewer/app/UI/: NewProjectPanel.cpp  NewProjectPanel.h  ProjectModel.h  ProjectOptionsPanel.cpp  ProjectOptionsPanel.h  ProjectSettingsHelpers.h  ProjectSettingsPanel.cpp  ProjectSettingsPanel.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  UIPanel.h  UIStyle.h  UserInterfaceBackend.cpp  UserInterfaceBackend.h  WindowSubsystem.cpp  WindowSubsystem.h
viewer/assets/raw/shaders/: CageMesh.frag  CageMesh.vert  Common.inc.glsl  Gizmo.frag  Gizmo.vert  Gradient.frag  Gradient.vert  Grid.frag  Grid.vert  StaticMesh.frag  StaticMesh.vert  Wireframe.frag  Wireframe.vert
viewer/assets/raw/shaders/voxelizer/: surf_vox_conserv_bit.frag  vol_vox_bit.frag
viewer/cmake/: Utilities.cmake
viewer/configured_files/: CMakeLists.txt  Configuration.h.in
viewer/scripts/: CompileShaders.py  PackageAssets.py
